# s-peach

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: brotips.md  cloning-tips.md  decisions.md  system.md
docs/features/: README.md
docs/features/cli/: README.md
docs/features/tts-server/: README.md
scripts/: build.sh  install-from-test-pypi.sh  install.sh  publish-pypi.sh  publish-testpypi.sh  smoke-test.sh
src/s_peach/: __init__.py  audio.py  config.py  daemon.py  hooks.py  mcp_server.py  paths.py  scaffolding.py  service.py  voices.py
src/s_peach/_vendor/: __init__.py
src/s_peach/_vendor/kittentts/: LICENSE  get_model.py  onnx_model.py
src/s_peach/cli/: __init__.py  __main__.py  _helpers.py  _parser.py  daemon.py  discover.py  doctor.py  hooks.py  init.py  notify.py  say.py  serve.py  service.py  voices.py
src/s_peach/data/: s-peach-notifier.bat  s-peach-notifier.sh  settings.json
src/s_peach/defaults/: client.yaml  server.yaml
src/s_peach/doctor/: __init__.py  models.py  render.py
src/s_peach/doctor/checks/: config.py  dependencies.py  environment.py  hooks.py  server.py  voices.py
src/s_peach/models/: __init__.py  base.py  chatterbox.py  kitten.py  kokoro.py
src/s_peach/server/: __init__.py  endpoints.py  helpers.py  middleware.py  models.py
tests/: conftest.py  test_audio.py  test_chatterbox.py  test_config.py  test_daemon.py  test_hooks.py  test_integration.py  test_kitten.py  test_kokoro.py  test_mcp_server.py  test_paths.py  test_scaffolding.py  test_service.py  test_voice_packaging.py  test_voices.py
tests/cli/: conftest.py  test_auto_init.py  test_config.py  test_daemon_cli.py  test_discover.py  test_help.py  test_hooks_cli.py  test_init.py  test_notify.py  test_say.py  test_serve.py  test_voices.py
tests/doctor/: conftest.py  test_checks.py  test_fixes.py  test_render.py
tests/server/: conftest.py  test_endpoints.py  test_helpers.py  test_middleware.py
